Added scripts to get JAR files. Updated README.md to reflect the changes